Add update test case logic, delete test case logic, fixed migration scripts, fixed entity, add new exception